@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-12-2005 fixed: Clicking on "All Albums" items in Top 100, Recently Played and Recently Added Albums
+			(Note: Queueing is still broken.  It gets *ALL* songs from the database.)
  - 10-12-2005 fixed/changed: analog buttons can't turn off screensaver. plasma owners with flaky controllers (hi poing!) rejoice.
  - 10-12-2005 fixed: browse for subtitles (forgot some code)
  - 10-12-2005 fixed: Top 100 items in Music Library
